# AIterate-resume

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
aiterate_resume/: llm.py
src/aiterate_resume/: chat.py  cli.py  reflection.py  search_replace.py  search_replace_format.py  search_replace_prompts.py  system_prompts.py
tests/: test_search_replace.py  test_search_replace_format.py
