[project]
name = "aiterate-resume"
version = "0.1.0"
description = "CLI for iterating on your resume with an LLM."
authors = [
    { name = "itsjohncs", email = "johnsullivan.pem@gmail.com" }
]
dependencies = [
    "openai>=1.37.0",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"aiterate-resume" = "aiterate_resume:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "pyright>=1.1.372",
    "ruff>=0.5.4",
    "pytest>=8.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aiterate_resume"]

[tool.pyright]
venvPath = "."
venv = ".venv"
